# video-editor-app

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  autoeditor.py  index.html  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: editor.rs  export.rs  media.rs  recording.rs
src-tauri/src/editor/: audio.rs  autozoom.rs  effects.rs  ffmpeg.rs  mod.rs  project.rs  silence.rs
src-tauri/src/models/: mod.rs
src-tauri/src/recording/: audio.rs  audio_capture.rs  encoder.rs  mod.rs  mouse_tracker.rs  screen.rs
src/components/editor/: EditorView.tsx  Inspector.tsx  PreviewCanvas.tsx  ScenePresetPicker.tsx  Timeline.tsx  TimelineClip.tsx  TimelineTrack.tsx  Toolbar.tsx  Waveform.tsx
src/components/export/: ExportDialog.tsx  ExportProgress.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx
src/components/overlays/: ImageOverlay.tsx  TextOverlay.tsx  WebcamOverlay.tsx
src/components/recorder/: OverlayView.tsx  RecorderView.tsx  RecordingControls.tsx  RecordingPreview.tsx  SceneBar.tsx  SceneCanvas.tsx  SourceList.tsx  SourceOverlay.tsx  SourcePicker.tsx  SourceSelector.tsx
src/components/settings/: SettingsDialog.tsx
src/hooks/: useActiveScene.ts  useCaptureSources.ts  useCaptureStream.ts  useMediaSources.ts  useOverlayWindow.ts  usePlayback.ts  useShortcuts.ts  useSourceActions.ts
src/lib/: ffmpeg.ts  paths.ts  scenePresets.ts  shortcut.ts  stream.ts  time.ts  zoom.ts
src/stores/: editorStore.ts  recorderStore.ts  sceneStore.ts  settingsStore.ts  uiStore.ts
src/styles/: globals.css
src/types/: capture.ts  project.ts  recording.ts  scene.ts
