[package]
name = "autoeditor"
version = "0.1.0"
description = "Desktop screen recorder and video editor with automatic silence removal"
authors = ["KozielGPC"]
license = "MIT"
repository = "https://github.com/KozielGPC/video-editor-app"
edition = "2021"

[lib]
name = "autoeditor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
percent-encoding = "2"

# Audio capture via CoreAudio (replaces avfoundation audio)
cpal = "0.15"
hound = "3.5"

# Encoding for thumbnails
base64 = "0.22"

# macOS Core Graphics bindings for fallback and thumbnails
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
foreign-types = "0.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
